--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mame (0.160-1) unstable; urgency=medium
+
+  * New upstream release
+  * debian/patches:
+    - removed man pages updates, contributed upstream
+    - updated gnu-fixes to new source layout
+
+ -- Cesare Falco <c.falco@ubuntu.com>  Fri, 27 Mar 2015 16:03:45 +0100
+
 mame (0.159-1) unstable; urgency=medium
 
   * New upstream release
