--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+mame (0.162-1) unstable; urgency=medium
+
+  * New upstream release
+  * Accomodate to massive upstream make process refactoring:
+    - debian/patches:
+      + Dropped gnu-fixes patch
+    - debian/rules: Reworked makefile variables overrides
+    - debian/control: Temporarily remove deps on common lib
+  * After upstream merge of MESS into MAME:
+    - removed mess package
+    - renamed mess-data package to mame-data
+
+ -- Cesare Falco <c.falco@ubuntu.com>  Thu, 28 May 2015 05:49:01 +0200
+
 mame (0.160-1) unstable; urgency=medium
 
   * New upstream release
